# rest-api-modernized

./: .env  .env.example  README.md  alembic.ini  pyproject.toml  readme.md
.kavia-metadata/: branch-info.txt
.knowledge/: .knowledge.json  README.md.json  alembic.ini.json  alembic___init__.py.json  alembic_env.py.json  alembic_versions_0001_initial_placeholder.py.json  alembic_versions_0002_core_domain_tables.py.json  app___init__.py.json  app_api___init__.py.json  app_api_routes.py.json  app_auth___init__.py.json  app_auth_dependencies.py.json  app_auth_oidc.py.json  app_cli.py.json  app_common___init__.py.json  app_common_errors.py.json  app_common_exception_handlers.py.json  app_common_pagination.py.json  app_core___init__.py.json  app_core_config.py.json  app_core_logging.py.json  app_db___init__.py.json  app_db_session.py.json  app_dependencies___init__.py.json  app_dependencies_db.py.json  app_domain___init__.py.json  app_domain_errors.py.json  app_domain_repositories.py.json  app_domain_schemas.py.json  app_domain_services.py.json  app_main.py.json  app_middleware___init__.py.json  app_middleware_correlation.py.json  app_models___init__.py.json  app_models_base.py.json  app_models_domain.py.json  app_openapi___init__.py.json  app_openapi_metadata.py.json  app_routers___init__.py.json  app_routers_health.py.json  (+7 more)
.knowledge/.vector_db/: milvus.db
alembic/: env.py
alembic/versions/: 0001_initial_placeholder.py  0002_core_domain_tables.py
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  dependencies.py  oidc.py
(+29 files in other folders)
